--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         background-color: var(--c-bg);
       }
     </style>
-    <title>Hello VuePress | </title><meta name="description" content="">
+    <title> </title><meta name="description" content="">
     <link rel="modulepreload" href="/assets/app.856a5442.js"><link rel="modulepreload" href="/assets/index.html.b2868803.js"><link rel="modulepreload" href="/assets/index.html.6048e5a9.js"><link rel="prefetch" href="/assets/404.html.f166316b.js"><link rel="prefetch" href="/assets/404.html.4e4fcb1f.js"><link rel="prefetch" href="/assets/404.fd598984.js"><link rel="prefetch" href="/assets/Layout.f53fd555.js">
     <link rel="stylesheet" href="/assets/style.c880abed.css">
   </head>
